feat(api): harden launch backend and local stack